# ocaml-arg-complete

./: CHANGELOG.md  README.md  arg-complete.opam  dune-project  index.html
.github/workflows/: ci.yml  deploy.yml
arg-complete/: index.html
arg-complete/Arg_complete/: index.html
arg-complete/Arg_complete/Rest_all_compat/: index.html
arg-complete/Arg_complete/Util/: index.html
example/: README.md  demo-completion.sh  demo.cppo.ml  demo.ml  demo_compat.ml  dune
src/: arg_complete.cppo.ml  arg_complete.cppo.mli  arg_complete.ml  dune
test/: arg_complete_test.cppo.ml  arg_complete_test.ml  dune
